--- a/pro/css/shoppingcar.css
+++ b/pro/css/shoppingcar.css
@@ -268,3 +268,101 @@ th{
 .shop_product_list:nth-child(n+3) th{
 	border-top:1px solid #ccc;
 }
+.check_all{
+    vertical-align:middle;
+}
+.fun_btn{
+    margin-top:10px;
+}
+.control_all{
+    border-radius: 2px;
+    border: 1px solid #959595;
+    border-bottom: 1px solid #6d6d6d;
+    background: #f7f7f7;
+    -moz-box-shadow: inset 0 1px 0 #fff, 0 1px 0 #f2f2f2;
+    -webkit-box-shadow: inset 0 1px 0 #fff, 0 1px 0 #f2f2f2;
+    -ms-box-shadow: inset 0 1px 0 #fff, 0 1px 0 #f2f2f2;
+    box-shadow: inset 0 1px 0 #fff, 0 1px 0 #f2f2f2;
+    color: #434343;
+    padding: 0 11px;
+    line-height: 25px;
+    font-size: 12px;
+    font-weight: bold;
+    margin-left:6px;
+    background:#fff;
+    display: inline-block;
+    vertical-align: middle;
+    font-family: "Microsoft Yahei",Tahoma,"dotum",sans-serif;
+}
+.total_box{
+    margin-top: 50px;
+    border:1px solid #8d8d8d;
+    border-top:2px solid #333;
+}
+.set_amount{
+    display: table;
+    width: 100%;
+    background-color: #f7f8fc;
+}
+.set_amount>div{
+    width:245px;
+    display:table-cell;
+    padding:18px 0px 18px 30px;
+    position:relative;
+}
+
+.set_amount>div>p{
+    margin-bottom: -4px;
+    color: #212121;
+    font-size: 13px;
+}
+
+.set_amount>div>b{
+    line-height: 1.5;
+    margin-right: 0.3em;
+    font-weight: normal;
+    font-family: tahoma;
+    color: #212121;
+    font-size: 24px;
+}
+.set_amount>div:nth-child(n+2){
+    border-left: 1px solid #ebebeb;
+}
+.set_amount>div>span{
+    font-size: 24px;
+    color: #212121;
+    font-family: tahoma;
+    margin-right: 4px;
+    line-height: 1.5;
+    font-weight:700;
+}
+.total{
+    background-color: #e9edf6;
+}
+.set_amount>.total>b,.set_amount>.total>span{
+    color: #f22a2c;
+}
+.set_amount>div>i{
+    top: 35px;
+    margin-top: 0;
+    position: absolute;
+    left: -17px;
+    top: 50%;
+    display: inline-block;
+    width: 33px;
+    height: 33px;
+    margin-top: -16px;
+    background: url(../ico_images/sp1.png) no-repeat;
+}
+.set_amount>div .plus{
+    background-position:0 -150px;
+}
+.set_amount>div .reduce{
+    background-position:-35px -150px;
+}
+.set_amount>div .equal{
+    background-position:-70px -150px;
+}
+.change_rmb{
+    color:#616161;
+}
